force-app/main/default/objects/Driver_Bonus__c/Driver_Bonus__c.object-meta.xml
<CustomObject>
    <label>Driver Bonus</label>
    <nameField>
        <displayFormat>DB-{0}</displayFormat>
        <label>Driver Bonus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driver Bonuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>