force-app/main/default/objects/Driver_Bonus__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <label>Bonus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trip Fee</fullName>
            </value>
            <value>
                <fullName>Training Fee</fullName>
            </value>
            <value>
                <fullName>Exceptions</fullName>
            </value>
            <value>
                <fullName>jResponse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>