force-app/main/default/objects/Driver_Bonus__c/fields/Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Amount__c</fullName>
    <label>Bonus Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>