force-app/main/default/objects/Driver_Bonus__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <description>Driver related to bonus</description>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Driver Bonuses</relationshipLabel>
    <relationshipName>Driver_Bonuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>