force-app/main/default/objects/Driver_Bonus__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>