force-app/main/default/objects/Driver_Bonus__c/validationRules/Validate_Bonus.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Bonus</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Bonus__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Bonus__c</errorDisplayField>
    <errorMessage>Bonus is required.</errorMessage>
</ValidationRule>