force-app/main/default/objects/Driver_Bonus__c/validationRules/Validate_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Reason</fullName>
    <active>true</active>
    <description>Reason is required.</description>
    <errorConditionFormula>AND(
ISBLANK(Reason__c))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason is required to continue.</errorMessage>
</ValidationRule>